--- a/mall/src/main/res/layout/activity_pay_finish.xml
+++ b/mall/src/main/res/layout/activity_pay_finish.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="60px">
 
         <com.ruffian.library.RTextView
-            android:id="@+id/back"
+            android:id="@+id/back_main"
             android:layout_width="261px"
             android:layout_height="88px"
             android:gravity="center"
