--- a/mall/src/main/res/layout/inquery_merchant_detail_item.xml
+++ b/mall/src/main/res/layout/inquery_merchant_detail_item.xml
@@ -27,7 +27,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="共享舞美"
+                    android:text=""
+                    android:maxLength="13"
                     android:textColor="@color/black"
                     android:textSize="32px"
                     android:id="@+id/shop_name"
