--- a/mall/src/main/res/layout/my_integral.xml
+++ b/mall/src/main/res/layout/my_integral.xml
@@ -42,6 +42,7 @@
             <View
                 android:layout_width="44px"
                 android:layout_height="44px"
+                android:id="@+id/telephone"
                 android:layout_marginRight="30px"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
