--- a/mall/src/main/res/layout/activity_login.xml
+++ b/mall/src/main/res/layout/activity_login.xml
@@ -159,8 +159,16 @@
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/wechat_login"
+        android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="222px">
+        <com.zhy.autolayout.AutoLinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center_vertical">
+
 
         <View
             android:layout_width="144px"
@@ -183,14 +191,16 @@
             android:layout_height="2px"
             android:layout_gravity="center_vertical"
             android:background="@color/gray_9" />
+        </com.zhy.autolayout.AutoLinearLayout>
+        <View
+
+            android:layout_width="60px"
+            android:layout_height="60px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="38px"
+            android:background="@drawable/wechat_icon"
+            app:layout_auto_basewidth="height" />
+        </com.zhy.autolayout.AutoLinearLayout>
     </com.zhy.autolayout.AutoLinearLayout>
 
-    <View
-        android:id="@+id/wechat_login"
-        android:layout_width="60px"
-        android:layout_height="60px"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="38px"
-        android:background="@drawable/wechat_icon"
-        app:layout_auto_basewidth="height" />
-</com.zhy.autolayout.AutoLinearLayout>
+
