--- a/mall/src/main/res/layout/activity_my_order_person.xml
+++ b/mall/src/main/res/layout/activity_my_order_person.xml
@@ -112,7 +112,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="待评价"
+        android:text="已完成"
         android:id="@+id/waite_evaluate"
         android:textColor="@color/gray_b"
         android:textSize="28px" />
