--- a/mall/src/main/res/layout/activity_order_person.xml
+++ b/mall/src/main/res/layout/activity_order_person.xml
@@ -105,7 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="230px"
-                        android:text="杭州奥体中心"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="28px" />
                 </com.zhy.autolayout.AutoRelativeLayout>
@@ -127,7 +127,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="230px"
-                        android:text="6月6日12:00-6月8日12:00"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="28px" />
                 </com.zhy.autolayout.AutoRelativeLayout>
@@ -149,7 +149,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="230px"
-                        android:text="啊康康  188 8888 8888"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="28px" />
                 </com.zhy.autolayout.AutoRelativeLayout>
@@ -247,7 +247,9 @@
                 <com.zhy.autolayout.AutoRelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10px">
+                    android:layout_marginTop="10px"
+                    android:id="@+id/insurance_layout"
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -263,7 +265,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="105px"
-                        android:text="人生意外险"
+                        android:text=""
                         android:textColor="@color/gray_9"
                         android:textSize="24px" />
 
