--- a/mall/src/main/res/layout/fragment_myself.xml
+++ b/mall/src/main/res/layout/fragment_myself.xml
@@ -446,7 +446,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="12px"
-                            android:text="待服务"
+                            android:text="待完成"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
@@ -474,7 +474,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="12px"
-                            android:text="待评价"
+                            android:text="已完成"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
