--- a/mall/src/main/res/layout/fragment_work.xml
+++ b/mall/src/main/res/layout/fragment_work.xml
@@ -177,7 +177,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="12px"
-                            android:text="未报价"
+                            android:text="待报价"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
@@ -311,7 +311,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="0px"
-                            android:text="待结款"
+                            android:text="待付尾款"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
@@ -339,7 +339,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="0px"
-                            android:text="待服务"
+                            android:text="待完成"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
@@ -367,7 +367,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="0px"
-                            android:text="服务中"
+                            android:text="已完成"
                             android:textColor="@color/gray_9"
                             android:textSize="28px" />
                     </com.zhy.autolayout.AutoLinearLayout>
