--- a/mall/src/main/res/layout/receiver_coupon_item.xml
+++ b/mall/src/main/res/layout/receiver_coupon_item.xml
@@ -13,79 +13,93 @@
             android:background="@drawable/receiver_coupon_bg">
 
             <TextView
+                android:id="@+id/money_symbol"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="29px"
-                android:layout_marginTop="30px"
+                android:layout_marginTop="45px"
                 android:text="￥"
-                android:id="@+id/money_symbol"
                 android:textColor="@color/appColor"
                 android:textSize="28px"
 
                 />
 
             <TextView
+                android:id="@+id/money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="50px"
+                android:layout_marginLeft="60px"
+                android:maxLength="5"
                 android:text="30"
-                android:maxLength="3"
                 android:textColor="@color/appColor"
-                android:textSize="140px"
-                android:id="@+id/money"
-                android:textStyle="bold" />
+                android:textSize="84px"
+                android:textStyle="bold"
+
+                />
 
             <com.zhy.autolayout.AutoLinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="248px"
-                android:layout_marginTop="30px"
+                android:layout_below="@+id/money"
+                android:layout_marginLeft="50px"
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="XXXXXXX"
-                    android:id="@+id/coupon_name"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="28px" />
-                <TextView
 
+                    android:id="@+id/use_time"
                     android:layout_width="wrap_content"
+
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12px"
                     android:text="2018.05.05-2018.05.05"
                     android:textColor="@color/gray_9"
-                    android:id="@+id/use_time"
                     android:textSize="20px" />
 
                 <TextView
 
-                  android:id="@+id/coupon_des"
+                    android:id="@+id/coupon_des"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40px"
-                    android:text=""
-                    android:singleLine="true"
+                    android:layout_marginTop="4px"
                     android:ellipsize="end"
                     android:maxWidth="240px"
+                    android:singleLine="true"
+                    android:text=""
                     android:textColor="@color/gray_9"
                     android:textSize="20px" />
             </com.zhy.autolayout.AutoLinearLayout>
-            <TextView
+
+            <com.zhy.autolayout.AutoLinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="立即\n领取"
-                android:textSize="54px"
-                android:padding="10px"
-               android:id="@+id/receiver"
-
-                android:layout_centerVertical="true"
+                android:layout_marginRight="218px"
+                android:layout_marginTop="30px"
                 android:layout_alignParentEnd="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/coupon_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XXXXXXX"
+
+                    android:textColor="@color/black"
+                    android:textSize="28px"
+                    android:textStyle="bold" />
+
+            </com.zhy.autolayout.AutoLinearLayout>
+
+            <TextView
+                android:id="@+id/receiver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="28px"
+
+                android:padding="10px"
+                android:text="立即\n领取"
                 android:textColor="@color/transparent"
+                android:textSize="54px"
 
                 />
         </com.zhy.autolayout.AutoRelativeLayout>
