--- a/mall/src/main/res/layout/system_message_item.xml
+++ b/mall/src/main/res/layout/system_message_item.xml
@@ -13,18 +13,27 @@
             android:layout_marginLeft="30px"
             android:layout_marginRight="30px"
             android:layout_marginTop="10px">
-
+            <View
+                android:layout_width="44px"
+                android:layout_height="44px"
+                android:background="@drawable/system_message_un_select"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/message_select"
+                />
             <ImageView
                 android:id="@+id/message_image"
                 android:layout_width="120px"
                 android:layout_height="120px"
                 android:background="@drawable/ic_launcher"
-                android:layout_margin="20px" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                />
 
             <com.zhy.autolayout.AutoLinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="20px"
                 android:orientation="vertical">
 
                 <TextView
