--- a/mall/src/main/res/layout/activity_order_person.xml
+++ b/mall/src/main/res/layout/activity_order_person.xml
@@ -408,7 +408,6 @@
                 <com.zhy.autolayout.AutoRelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30px"
 
                     android:layout_marginTop="18px">
 
@@ -494,6 +493,11 @@
                 </com.zhy.autolayout.AutoRelativeLayout>
 
             </com.zhy.autolayout.AutoLinearLayout>
+           <View
+               android:layout_width="match_parent"
+               android:layout_height="30px"
+               android:background="@color/white"
+               />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
