--- a/mall/src/main/res/layout/activity_main_merchant.xml
+++ b/mall/src/main/res/layout/activity_main_merchant.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/tools"
     app:ignore="NamespaceTypo">
 
-    <LinearLayout
+    <android.support.v4.view.ViewPager
         android:id="@+id/fragment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         android:background="@color/gray_6"
         android:orientation="vertical">
 
-    </LinearLayout>
+    </android.support.v4.view.ViewPager>
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
