--- a/mall/src/main/res/layout/select_coupon_item.xml
+++ b/mall/src/main/res/layout/select_coupon_item.xml
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12px"
-                    android:text="2018.05.05-2018.05.05"
+                    android:text=""
                     android:textColor="@color/gray_9"
                     android:id="@+id/use_time"
                     android:textSize="20px" />
