--- a/mall/src/main/res/layout/activity_my_order_person.xml
+++ b/mall/src/main/res/layout/activity_my_order_person.xml
@@ -43,6 +43,7 @@
                 android:layout_width="44px"
                 android:layout_height="44px"
                 android:id="@+id/message"
+                android:visibility="gone"
                 android:layout_marginRight="30px"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
