--- a/mall/src/main/res/layout/activity_person_setting.xml
+++ b/mall/src/main/res/layout/activity_person_setting.xml
@@ -67,6 +67,9 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="40px"
             android:text="啊康康"
+            android:layout_marginLeft="100px"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:id="@+id/nick_name"
             android:textColor="@color/black"
             android:textSize="32px"
