--- a/mall/src/main/res/layout/system_message_item.xml
+++ b/mall/src/main/res/layout/system_message_item.xml
@@ -6,65 +6,69 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <com.zhy.autolayout.AutoLinearLayout
+        <com.zhy.autolayout.AutoRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="160px"
+            android:layout_height="170px"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="30px"
             android:layout_marginRight="30px"
             android:layout_marginTop="10px">
+
             <View
+                android:id="@+id/message_select"
                 android:layout_width="44px"
                 android:layout_height="44px"
-                android:background="@drawable/system_message_un_select"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/message_select"
-                />
+                android:background="@drawable/system_message_un_select" />
+
             <ImageView
                 android:id="@+id/message_image"
                 android:layout_width="120px"
                 android:layout_height="120px"
-                android:background="@drawable/ic_launcher"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="30px"
-                />
+                android:background="@drawable/ic_launcher" />
 
             <com.zhy.autolayout.AutoLinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="20px"
+                android:layout_marginRight="20px"
+                android:layout_toRightOf="@id/message_image"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28px"
                     android:text="系统消息"
-                    android:id="@+id/title"
                     android:textColor="@color/black"
                     android:textSize="30px" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16px"
-                    android:maxLines="2"
-                    android:text=""
                     android:id="@+id/message_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:maxLines="3"
+                    android:text=""
+                    android:ellipsize="end"
                     android:textColor="@color/gray_b"
                     android:textSize="26px" />
             </com.zhy.autolayout.AutoLinearLayout>
+
             <TextView
+                android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30px"
-                android:textSize="24px"
-                android:textColor="@color/gray_9"
-                android:text=""
-                android:id="@+id/time"
                 android:layout_marginRight="20px"
-                />
-        </com.zhy.autolayout.AutoLinearLayout>
+                android:layout_marginTop="30px"
+                android:text=""
+                android:layout_alignParentEnd="true"
+                android:textColor="@color/gray_9"
+                android:textSize="24px" />
+        </com.zhy.autolayout.AutoRelativeLayout>
     </com.zhy.autolayout.AutoRelativeLayout>
 </layout>
