--- a/mall/src/main/res/values/styles.xml
+++ b/mall/src/main/res/values/styles.xml
@@ -74,4 +74,9 @@
         <!-- <item name="android:background">@drawable/nav_page</item> -->
         <item name="android:background">@color/navpage</item>
     </style>
+
+    <style name="Theme.AppStartLoad" parent="AppTheme.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_bg</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 </resources>
